--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "chroma-js": "^2.1.2",
     "classnames": "^2.3.1",
+    "emoji-mart": "^3.0.1",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-sortable-hoc": "^2.0.0",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
