--- a/project-data.json
+++ b/project-data.json
@@ -40,5 +40,5 @@
       "challenge": "Our Minimum Viable Product (MVP) was to display a list of dinosaurs and their images. We faced challenges with data fetching and rendering, as well as implementing search functionality and chart display.",
       "solution": " We overcame these challenges by collaborating effectively, leveraging our diverse skills, and utilizing modular JavaScript to enhance the app's functionality."
     },
-    "wireframe": "image/1/wireframe/1.png"
+    "wireframe": ""
   }
